--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				<section id="features">
 					<div class="container">
 						<header>
-							<h2>Gentlemen, behold! This is <strong>Strongly Typed</strong>!</h2>
+							<h2>Gentlemen, behold! This is <strong>THE ONLY SHIRT YOU NEED</strong>!</h2>
 						</header>
 						<div class="row aln-center">
 							<div class="col-4 col-6-medium col-12-small">
@@ -65,11 +65,10 @@
 									<section>
 										<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 										<header>
-											<h3>Okay, so what is this?</h3>
+											<h3>Okay, so who are we?</h3>
 										</header>
-										<p>This is <strong>Strongly Typed</strong>, a free, fully responsive site template
-										by <a href="http://html5up.net">HTML5 UP</a>. Free for personal and commercial use under the
-										<a href="http://html5up.net/license">CCA 3.0 license</a>.</p>
+										<p>We are <strong>B. E. Dad</strong>, a clothing line created for dads, not just
+										any dad, But the Best Dads Ever. The Proud, show off dads. <strong>YOU</strong>
 									</section>
 
 							</div>
