--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 											<h3>Okay, so who are we?</h3>
 										</header>
 										<p>We are <strong>B. E. Dad</strong>, a clothing line created for dads, not just
-										any dad, But the Best Dads Ever. The Proud, show off dads. <strong>YOU</strong>
+										any dad, But the Best Dads Ever. The Proud, show off type Dads. <strong>YOU</strong>
 									</section>
 
 							</div>
