--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				<section id="features">
 					<div class="container">
 						<header>
-							<h2>Gentlemen, behold! This is <strong>THE ONLY SHIRT YOU'LL EVER WEAR</strong>!</h2>
+							<h2>Gentlemen, behold! This is the <strong>ONLY SHIRT YOU'LL EVER WEAR</strong>!</h2>
             </header>
 						<div class="row aln-center">
 							<div class="col-4 col-6-medium col-12-small">
